# burn-ppo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  tournament_results.json
.claude/: settings.json
.claude/hooks/: protected-files.sh  stop-check.sh
configs/: README.md  cartpole.toml  connect_four.toml  default.toml  liars_dice.toml  liars_dice_ctde.toml  skull.toml  skull_ctde.toml  test.toml
docs/: CTDE.md  DESIGN.md  TROUBLESHOOTING.md  WINGSPAN.md
scripts/: aim_watcher.py  pyproject.toml
src/: backend.rs  checkpoint.rs  config.rs  entropy.rs  env.rs  eval.rs  exploit_eval.rs  human.rs  interactive.rs  main.rs  metrics.rs  network.rs  normalization.rs  opponent_pool.rs  plackett_luce.rs  ppo.rs  profile.rs  progress.rs  rating_history.rs  schedule.rs  supervisor.rs  tournament.rs  utils.rs
src/envs/: cartpole.rs  connect_four.rs  liars_dice.rs  mod.rs  skull.rs
src/network/: cnn.rs  ctde.rs  mlp.rs  mod.rs
tests/: e2e.rs
