[package]
name = "burn-ppo"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu"]
cuda = ["burn/cuda"]
libtorch = ["burn/tch"]
wgpu = ["burn/wgpu"]
tracy = ["tracy-client"]

[dependencies]
# ML framework - base features, backend selected via features above
burn = { version = "0.19", features = ["autodiff", "fusion", "ndarray"] }

# CLI and config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Progress bars
indicatif = "0.17"

# Utilities
rand = "0.8"
num_cpus = "1.16"
anyhow = "1"
ctrlc = "3"

# Parallelization
rayon = "1.10"

# Profiling (Tracy integration, only our code - not dependencies)
tracy-client = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
