[package]
name = "burn-ppo"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu"]
cuda = ["burn/cuda"]
libtorch = ["burn/tch"]
metal = ["burn/metal"]
wgpu = ["burn/wgpu"]
tracy = ["tracy-client"]
tracy-callstack = ["tracy"]

[dependencies]
# ML framework - base features, backend selected via features above
burn = { version = "0.19", features = ["autodiff", "autotune", "fusion", "ndarray"] }

# CLI and config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Progress bars
indicatif = "0.17"

# Utilities
rand = "0.8"
num_cpus = "1.16"
anyhow = "1"
ctrlc = "3"

# Parallelization
rayon = "1.10"

# Skill rating (Weng-Lin/OpenSkill for tournaments)
skillratings = "0.28"

# Plotting (for tournament graphs)
plotters = "0.3"

# Profiling (Tracy integration, only our code - not dependencies)
tracy-client = { version = "0.18", optional = true }
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3"

# Fast release builds for development iteration
[profile.release]
lto = false            # No LTO = fast builds
incremental = true     # Fast rebuilds
debug = 1              # Line tables for profiling

# Peak performance builds (slow compilation, for benchmarks/distribution)
[profile.release-lto]
inherits = "release"
lto = "thin"           # Cross-crate optimization
codegen-units = 1      # Maximum optimization opportunity
incremental = false    # Incompatible with LTO
strip = true           # Smaller binary
panic = "abort"        # No unwinding overhead

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

# Allowed pedantic lints
cast_possible_truncation = "allow"  # frequent in ML code with tensor dimensions
cast_precision_loss = "allow"       # frequent f64 -> f32 conversions
comparison_chain = "allow"          # if-else chains can be clearer than match
too_many_arguments = "allow"
too_many_lines = "allow"
